--- a/report.html
+++ b/report.html
@@ -6,57 +6,27 @@
   <title>Student Attendance Report</title>
 
   <style>
-    body {
-      font-family: Poppins, sans-serif;
-      background: #eef3ff;
-      padding: 25px;
+    body { font-family:Poppins,sans-serif; background:#eef3ff; padding:25px; }
+    h1 { text-align:center; }
+    input, select {
+      width:100%; padding:12px; margin:10px 0;
+      border-radius:8px; border:1px solid #bbb;
     }
-
-    h1 { text-align: center; }
-
-    input {
-      width: 100%;
-      padding: 12px;
-      margin: 10px 0;
-      border-radius: 8px;
-      border: 1px solid #bbb;
-    }
-
     button {
-      width: 100%;
-      padding: 12px;
-      background: #1976d2;
-      color: white;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      font-size: 16px;
-      margin-top: 10px;
+      width:100%; padding:12px; background:#1976d2;
+      color:white; border:none; border-radius:8px;
+      cursor:pointer; font-size:16px; margin-top:10px;
     }
-
     table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 25px;
-      display: none;
+      width:100%; border-collapse:collapse;
+      margin-top:25px; display:none;
     }
-
     th, td {
-      border: 1px solid #999;
-      padding: 10px;
-      text-align: center;
+      border:1px solid #999; padding:10px; text-align:center;
     }
-
-    th {
-      background: #1976d2;
-      color: white;
-    }
-
+    th { background:#1976d2; color:white; }
     .no-data {
-      text-align: center;
-      margin-top: 20px;
-      color: red;
-      font-weight: 600;
+      text-align:center; margin-top:20px; color:red; font-weight:600;
     }
   </style>
 </head>
@@ -65,12 +35,26 @@
 
   <h1>Student Attendance Report</h1>
 
+  <label>Select Subject</label>
+  <select id="subSelect">
+    <option value="">Select subject</option>
+    <option>Maths</option>
+    <option>Science</option>
+    <option>English</option>
+    <option>History</option>
+    <option>Geography</option>
+    <option>Physics</option>
+  </select>
+
+  <label>Select Date</label>
+  <input type="date" id="dateInput" />
+
   <label>Enter Roll Number</label>
-  <input type="text" id="rollInput" placeholder="Enter roll number">
+  <input type="text" id="rollInput" placeholder="Enter roll number" />
 
   <button onclick="loadStudentReport()">Show Report</button>
 
-  <p id="noData" class="no-data" style="display:none;">No records found for this student.</p>
+  <p id="noData" class="no-data" style="display:none;">No records found.</p>
 
   <table id="studentTable">
     <thead>
@@ -88,6 +72,8 @@
 
   <script>
     function loadStudentReport() {
+      const subject = document.getElementById("subSelect").value;
+      const date = document.getElementById("dateInput").value;
       const roll = document.getElementById("rollInput").value.trim();
 
       const table = document.getElementById("studentTable");
@@ -98,32 +84,23 @@
       table.style.display = "none";
       noData.style.display = "none";
 
-      if (!roll) {
-        alert("Please enter roll number.");
+      if (!subject || !date || !roll) {
+        alert("Please select subject, date and roll number.");
         return;
       }
 
-      let allRecords = [];
+      const key = `attendance::${subject}::${new Date(date).toLocaleDateString('en-IN')}`;
+      const data = JSON.parse(localStorage.getItem(key)) || [];
 
-      // Load all attendance data from all subjects + teachers
-      for (let i = 0; i < localStorage.length; i++) {
-        const key = localStorage.key(i);
+      const filtered = data.filter(r => r.roll == roll);
 
-        if (key.startsWith("attendance::")) {
-          const data = JSON.parse(localStorage.getItem(key)) || [];
-          allRecords = allRecords.concat(data);
-        }
-      }
-
-      const studentRecords = allRecords.filter(r => r.roll == roll);
-
-      if (studentRecords.length === 0) {
+      if (filtered.length === 0) {
         noData.style.display = "block";
         return;
       }
 
-      studentRecords.forEach(r => {
-        let row = `
+      filtered.forEach(r => {
+        tbody.innerHTML += `
           <tr>
             <td>${r.name}</td>
             <td>${r.roll}</td>
@@ -131,9 +108,7 @@
             <td>${r.teacher}</td>
             <td>${r.date}</td>
             <td>${r.status}</td>
-          </tr>
-        `;
-        tbody.innerHTML += row;
+          </tr>`;
       });
 
       table.style.display = "table";
