--- a/report.html
+++ b/report.html
@@ -38,12 +38,12 @@
   <label>Select Subject</label>
   <select id="subSelect">
     <option value="">Select subject</option>
-    <option>Maths</option>
-    <option>Science</option>
-    <option>English</option>
-    <option>History</option>
-    <option>Geography</option>
-    <option>Physics</option>
+    <option>Computer Network</option>
+    <option>Principle of Software Engineer</option>
+    <option>Data Structure Algorithm</option>
+    <option>Statics Mathematics</option>
+    <option>Personal Finance</option>
+    <option>Computer Graphics</option>
   </select>
 
   <label>Select Date</label>
