--- a/report.html
+++ b/report.html
@@ -38,12 +38,20 @@
   <label>Select Subject</label>
   <select id="subSelect">
     <option value="">Select subject</option>
+
+    <!-- Added full subject list -->
     <option>Computer Network</option>
     <option>Principle of Software Engineer</option>
     <option>Data Structure Algorithm</option>
     <option>Statics Mathematics</option>
     <option>Personal Finance</option>
     <option>Computer Graphics</option>
+    <option>Cloud Computing</option>
+    <option>Python Programming</option>
+    <option>Operating System</option>
+    <option>Environmental Studies</option>
+    <option>Web Designing</option>
+
   </select>
 
   <label>Select Date</label>
