--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- Updated RJ College Attendance — Subjects Page with Logo + Animations -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,10 +10,8 @@
       --bg1:#eaf4ff;
       --bg2:#d9ecff;
       --accent:#1e88e5;
-      --glass: rgba(255,255,255,0.6);
-      --glass-border: rgba(255,255,255,0.45);
-      --card-radius:14px;
-      --shadow: 0 6px 18px rgba(30,30,30,0.08);
+      --glass: rgba(255,255,255,0.65);
+      --glass-border: rgba(255,255,255,0.38);
       font-family: Inter, Poppins, system-ui, sans-serif;
     }
     html,body{height:100%;margin:0}
@@ -29,29 +28,49 @@
       max-width:95%;
       border-radius:18px;
       padding:28px;
-      background: linear-gradient(180deg, rgba(255,255,255,0.55), rgba(255,255,255,0.45));
-      box-shadow:var(--shadow);
-      backdrop-filter: blur(8px) saturate(120%);
+      background: var(--glass);
+      box-shadow:0 8px 26px rgba(0,0,0,0.08);
+      backdrop-filter: blur(10px) saturate(140%);
       border: 1px solid var(--glass-border);
+      animation: fadeIn 0.7s ease;
     }
 
+    @keyframes fadeIn{ from{opacity:0; transform: translateY(12px);} to{opacity:1; transform:translateY(0);} }
+
+    .top-header{
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      gap:14px;
+      margin-bottom:22px;
+    }
+
+    .logo{
+      width:58px;
+      height:auto;
+      animation: logoPop 1.1s ease;
+    }
+    @keyframes logoPop{ 0%{transform:scale(.6); opacity:0} 100%{transform:scale(1); opacity:1} }
+
     h1{
-      margin:0 0 18px 0;
+      margin:0;
       font-size:22px;
       color:#063a6b;
       text-align:center;
       letter-spacing:0.2px;
+      animation: slideDown 0.8s ease;
     }
+    @keyframes slideDown{0%{opacity:0; transform:translateY(-8px)}100%{opacity:1; transform:translateY(0)}}
 
     .grid{
       display:grid;
       grid-template-columns:repeat(3,1fr);
-      gap:14px;
-      margin-bottom:18px;
+      gap:16px;
+      margin-bottom:20px;
     }
 
     .sub-btn{
-      padding:14px;
+      padding:16px;
       border-radius:12px;
       background: white;
       border:1px solid rgba(10,40,80,0.06);
@@ -60,10 +79,16 @@
       justify-content:center;
       cursor:pointer;
       font-weight:600;
-      box-shadow: 0 4px 10px rgba(16,48,96,0.04);
-      transition: transform .14s ease, box-shadow .14s ease;
+      box-shadow: 0 4px 12px rgba(16,48,96,0.06);
+      transition: all .18s ease;
+      animation: cardFade .7s ease;
     }
-    .sub-btn:hover{ transform: translateY(-4px); box-shadow: 0 10px 30px rgba(16,48,96,0.08); }
+    @keyframes cardFade{from{opacity:0; transform:translateY(10px)}to{opacity:1; transform:translateY(0)}}
+
+    .sub-btn:hover{
+      transform: translateY(-4px) scale(1.04);
+      box-shadow: 0 12px 30px rgba(16,48,96,0.12);
+    }
 
     .report{
       display:flex;
@@ -77,7 +102,9 @@
       padding:12px 18px;
       border-radius:10px;
       font-weight:700;
+      transition: .18s ease;
     }
+    .report a:hover{opacity:.85; transform:scale(1.03)}
 
     /* Modal */
     .modal-backdrop{
@@ -89,21 +116,20 @@
       background: rgba(8,18,40,0.35);
       z-index:60;
     }
+
     .modal{
       width:420px;
       max-width:94%;
-      background: linear-gradient(180deg, rgba(255,255,255,0.9), rgba(255,255,255,0.82));
+      background: rgba(255,255,255,0.92);
       border-radius:16px;
       padding:20px;
-      box-shadow: 0 20px 60px rgba(6,30,64,0.25);
+      box-shadow: 0 20px 50px rgba(6,30,64,0.25);
       border:1px solid rgba(255,255,255,0.6);
-      backdrop-filter: blur(8px);
       animation: pop .22s ease;
     }
     @keyframes pop{ from{ transform: translateY(14px) scale(.98); opacity:0 } to{ transform: translateY(0) scale(1); opacity:1 } }
 
     .modal h2{ margin:0 0 10px 0; font-size:16px; color:#063a6b; }
-    .modal p{ margin:0 0 14px 0; color:#234a6f; font-size:13px; opacity:0.95; }
 
     .field{ display:flex; flex-direction:column; gap:6px; margin-bottom:10px; }
     input[type="text"], input[type="password"]{
@@ -122,17 +148,20 @@
       cursor:pointer;
       font-weight:700;
     }
-    .btn-cancel{ background:transparent; color:#234a6f; border:1px solid rgba(35,74,111,0.08); }
+    .btn-cancel{ background:transparent; color:#234a6f; border:1px solid rgba(35,74,111,0.12); }
     .btn-submit{ background:var(--accent); color:white; }
 
     .error{ color:#9b1c1c; font-size:13px; margin-top:6px; display:none; }
-
   </style>
 </head>
 <body>
 
   <div class="wrap">
-    <h1>RJ College of Commerce and Science — Select Subject</h1>
+
+    <div class="top-header">
+      <img src="logo.png" class="logo" alt="RJ Logo" />
+      <h1>RJ College — Select Subject</h1>
+    </div>
 
     <div class="grid" id="subjects"></div>
 
@@ -166,73 +195,67 @@
     </div>
   </div>
 
-  <script>
-    const SUBJECTS = [
-      "Computer Network",
-      "Principle of Software Engineer",
-      "Data Structure Algorithm",
-      "Statics Mathematics",
-      "Personal Finance",
-      "Computer Graphics"
-    ];
+<script>
+  const SUBJECTS = [
+    "Computer Network",
+    "Principle of Software Engineer",
+    "Data Structure Algorithm",
+    "Statics Mathematics",
+    "Personal Finance",
+    "Computer Graphics"
+  ];
 
-    const CREDENTIALS = {
-      "Computer Network": { teacher: "Yughandra More", pass: "CN-YM@4521" },
-      "Principle of Software Engineer": { teacher: "Archana Bhide", pass: "PSE-AB#8832" },
-      "Data Structure Algorithm": { teacher: "Aditi Mam", pass: "DSA-AM*7290" },
-      "Statics Mathematics": { teacher: "Punam Sindhu", pass: "STAT-PS$6614" },
-      "Personal Finance": { teacher: "Mandar Sir", pass: "PF-MS@3107" },
-      "Computer Graphics": { teacher: "Yughandra More", pass: "CG-YM%5579" }
-    };
+  const CREDENTIALS = {
+    "Computer Network": { teacher: "Yughandra More", pass: "CN-YM@4521" },
+    "Principle of Software Engineer": { teacher: "Archana Bhide", pass: "PSE-AB#8832" },
+    "Data Structure Algorithm": { teacher: "Aditi Mam", pass: "DSA-AM*7290" },
+    "Statics Mathematics": { teacher: "Punam Sindhu", pass: "STAT-PS$6614" },
+    "Personal Finance": { teacher: "Mandar Sir", pass: "PF-MS@3107" },
+    "Computer Graphics": { teacher: "Yughandra More", pass: "CG-YM%5579" }
+  };
 
-    const subjectsWrap = document.getElementById('subjects');
-    SUBJECTS.forEach(sub => {
-      const btn = document.createElement('button');
-      btn.className = 'sub-btn';
-      btn.innerText = sub;
-      btn.onclick = () => openLogin(sub);
-      subjectsWrap.appendChild(btn);
-    });
+  const subjectsWrap = document.getElementById('subjects');
+  SUBJECTS.forEach(sub => {
+    const btn = document.createElement('button');
+    btn.className = 'sub-btn';
+    btn.innerText = sub;
+    btn.onclick = () => openLogin(sub);
+    subjectsWrap.appendChild(btn);
+  });
 
-    const backdrop = document.getElementById('modalBackdrop');
-    const modalSubject = document.getElementById('modalSubject');
-    const teacherNameInput = document.getElementById('teacherName');
-    const teacherPassInput = document.getElementById('teacherPass');
-    const modalError = document.getElementById('modalError');
+  const backdrop = document.getElementById('modalBackdrop');
+  const modalSubject = document.getElementById('modalSubject');
+  const teacherNameInput = document.getElementById('teacherName');
+  const teacherPassInput = document.getElementById('teacherPass');
+  const modalError = document.getElementById('modalError');
 
-    let currentSubject = null;
+  let currentSubject = null;
 
-    function openLogin(subject){
-      currentSubject = subject;
-      modalSubject.textContent = subject;
-      teacherNameInput.value = '';
-      teacherPassInput.value = '';
-      modalError.style.display = 'none';
-      backdrop.style.display = 'flex';
+  function openLogin(subject){
+    currentSubject = subject;
+    modalSubject.textContent = subject;
+    teacherNameInput.value = '';
+    teacherPassInput.value = '';
+    modalError.style.display = 'none';
+    backdrop.style.display = 'flex';
+  }
+
+  function closeLogin(){ backdrop.style.display = 'none'; }
+  document.getElementById('cancelBtn').onclick = closeLogin;
+
+  function normalize(s){ return (s||'').trim().toLowerCase(); }
+
+  document.getElementById('submitBtn').onclick = function(){
+    const enteredName = teacherNameInput.value;
+    const enteredPass = teacherPassInput.value;
+    const cred = CREDENTIALS[currentSubject];
+
+    if (normalize(enteredName) === normalize(cred.teacher) && enteredPass === cred.pass) {
+      window.location.href = "attendance.html?sub=" + encodeURIComponent(currentSubject) + "&teacher=" + encodeURIComponent(cred.teacher);
+    } else {
+      modalError.style.display = "block";
     }
-
-    function closeLogin(){
-      backdrop.style.display = 'none';
-    }
-
-    document.getElementById('cancelBtn').onclick = closeLogin;
-
-    function normalize(s){ return (s||'').trim().toLowerCase(); }
-
-    document.getElementById('submitBtn').onclick = function(){
-      const enteredName = teacherNameInput.value;
-      const enteredPass = teacherPassInput.value;
-
-      const cred = CREDENTIALS[currentSubject];
-
-      if (normalize(enteredName) === normalize(cred.teacher) && enteredPass === cred.pass) {
-        window.location.href =
-          "attendance.html?sub=" + encodeURIComponent(currentSubject) +
-          "&teacher=" + encodeURIComponent(cred.teacher);
-      } else {
-        modalError.style.display = "block";
-      }
-    };
-  </script>
+  };
+</script>
 </body>
 </html>
