--- a/index.html
+++ b/index.html
@@ -1,26 +1,51 @@
-<!-- Updated RJ College Attendance — Subjects Page with Logo + Animations -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>RJ College Attendance — Subjects</title>
+
   <style>
     :root{
       --bg1:#eaf4ff;
       --bg2:#d9ecff;
       --accent:#1e88e5;
-      --glass: rgba(255,255,255,0.65);
-      --glass-border: rgba(255,255,255,0.38);
+      --glass: rgba(255,255,255,0.6);
+      --glass-border: rgba(255,255,255,0.45);
+      --shadow: 0 6px 18px rgba(30,30,30,0.08);
       font-family: Inter, Poppins, system-ui, sans-serif;
     }
-    html,body{height:100%;margin:0}
+
     body{
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      background: linear-gradient(135deg,var(--bg1),var(--bg2));
+      margin:0;
       padding:28px;
+      background: linear-gradient(135deg,var(--bg1),var(--bg2));
+      display:flex;
+      justify-content:center;
+    }
+
+    /* Logo */
+    .logo-box{
+      text-align:center;
+      margin-bottom:20px;
+      animation: fadeIn 1.2s ease;
+    }
+    .logo-box img{
+      width:110px;
+      height:auto;
+      border-radius:8px;
+      box-shadow:0 6px 16px rgba(0,0,0,0.1);
+      animation: popIn .9s ease;
+    }
+
+    @keyframes popIn{
+      from{ transform:scale(.85); opacity:0;}
+      to{ transform:scale(1); opacity:1;}
+    }
+
+    @keyframes fadeIn{
+      from{ opacity:0; }
+      to{ opacity:1; }
     }
 
     .wrap{
@@ -28,66 +53,52 @@
       max-width:95%;
       border-radius:18px;
       padding:28px;
-      background: var(--glass);
-      box-shadow:0 8px 26px rgba(0,0,0,0.08);
-      backdrop-filter: blur(10px) saturate(140%);
+      background: linear-gradient(180deg, rgba(255,255,255,0.55), rgba(255,255,255,0.45));
+      box-shadow:var(--shadow);
+      backdrop-filter: blur(8px) saturate(120%);
       border: 1px solid var(--glass-border);
-      animation: fadeIn 0.7s ease;
+      animation: fadeIn 1.2s ease;
     }
-
-    @keyframes fadeIn{ from{opacity:0; transform: translateY(12px);} to{opacity:1; transform:translateY(0);} }
-
-    .top-header{
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      gap:14px;
-      margin-bottom:22px;
-    }
-
-    .logo{
-      width:58px;
-      height:auto;
-      animation: logoPop 1.1s ease;
-    }
-    @keyframes logoPop{ 0%{transform:scale(.6); opacity:0} 100%{transform:scale(1); opacity:1} }
 
     h1{
-      margin:0;
+      margin:0 0 18px 0;
       font-size:22px;
       color:#063a6b;
       text-align:center;
       letter-spacing:0.2px;
-      animation: slideDown 0.8s ease;
     }
-    @keyframes slideDown{0%{opacity:0; transform:translateY(-8px)}100%{opacity:1; transform:translateY(0)}}
 
     .grid{
       display:grid;
       grid-template-columns:repeat(3,1fr);
-      gap:16px;
-      margin-bottom:20px;
+      gap:14px;
+      margin-bottom:18px;
     }
 
     .sub-btn{
-      padding:16px;
+      padding:14px;
       border-radius:12px;
-      background: white;
+      background:white;
       border:1px solid rgba(10,40,80,0.06);
       display:flex;
       align-items:center;
       justify-content:center;
       cursor:pointer;
       font-weight:600;
-      box-shadow: 0 4px 12px rgba(16,48,96,0.06);
-      transition: all .18s ease;
-      animation: cardFade .7s ease;
+      box-shadow:0 4px 10px rgba(16,48,96,0.04);
+      transition:0.18s ease;
+      animation: fadeInUp .6s ease forwards;
+      opacity:0;
     }
-    @keyframes cardFade{from{opacity:0; transform:translateY(10px)}to{opacity:1; transform:translateY(0)}}
 
     .sub-btn:hover{
-      transform: translateY(-4px) scale(1.04);
-      box-shadow: 0 12px 30px rgba(16,48,96,0.12);
+      transform:translateY(-4px);
+      box-shadow:0 12px 30px rgba(16,48,96,0.12);
+    }
+
+    @keyframes fadeInUp {
+      from { transform: translateY(20px); opacity:0; }
+      to { transform: translateY(0); opacity:1; }
     }
 
     .report{
@@ -102,9 +113,12 @@
       padding:12px 18px;
       border-radius:10px;
       font-weight:700;
-      transition: .18s ease;
+      transition:0.25s;
     }
-    .report a:hover{opacity:.85; transform:scale(1.03)}
+    .report a:hover{
+      background:#0f6ac9;
+      transform:translateY(-3px);
+    }
 
     /* Modal */
     .modal-backdrop{
@@ -120,16 +134,22 @@
     .modal{
       width:420px;
       max-width:94%;
-      background: rgba(255,255,255,0.92);
+      background: linear-gradient(180deg, rgba(255,255,255,0.9), rgba(255,255,255,0.82));
       border-radius:16px;
       padding:20px;
-      box-shadow: 0 20px 50px rgba(6,30,64,0.25);
+      box-shadow: 0 20px 60px rgba(6,30,64,0.25);
       border:1px solid rgba(255,255,255,0.6);
+      backdrop-filter: blur(8px);
       animation: pop .22s ease;
     }
-    @keyframes pop{ from{ transform: translateY(14px) scale(.98); opacity:0 } to{ transform: translateY(0) scale(1); opacity:1 } }
+
+    @keyframes pop{
+      from{ transform: translateY(14px) scale(.97); opacity:0 }
+      to{ transform: translateY(0) scale(1); opacity:1 }
+    }
 
     .modal h2{ margin:0 0 10px 0; font-size:16px; color:#063a6b; }
+    .modal p{ margin:0 0 14px 0; color:#234a6f; font-size:13px; }
 
     .field{ display:flex; flex-direction:column; gap:6px; margin-bottom:10px; }
     input[type="text"], input[type="password"]{
@@ -140,7 +160,7 @@
       outline:none;
     }
 
-    .modal-actions{ display:flex; gap:10px; justify-content:flex-end; margin-top:6px; }
+    .modal-actions{ display:flex; gap:10px; justify-content:flex-end; }
     .btn{
       padding:10px 14px;
       border-radius:10px;
@@ -148,20 +168,28 @@
       cursor:pointer;
       font-weight:700;
     }
-    .btn-cancel{ background:transparent; color:#234a6f; border:1px solid rgba(35,74,111,0.12); }
+    .btn-cancel{ background:transparent; color:#234a6f; border:1px solid rgba(35,74,111,0.08); }
     .btn-submit{ background:var(--accent); color:white; }
 
+    .btn-submit:hover{
+      background:#0d5cb0;
+    }
+
     .error{ color:#9b1c1c; font-size:13px; margin-top:6px; display:none; }
+
   </style>
 </head>
+
 <body>
 
   <div class="wrap">
-
-    <div class="top-header">
-      <img src="logo.png" class="logo" alt="RJ Logo" />
-      <h1>RJ College — Select Subject</h1>
+    
+    <!-- Logo -->
+    <div class="logo-box">
+      <img src="rj.png" alt="RJ College Logo">
     </div>
+
+    <h1>RJ College of Commerce and Science — Select Subject</h1>
 
     <div class="grid" id="subjects"></div>
 
@@ -195,67 +223,76 @@
     </div>
   </div>
 
-<script>
-  const SUBJECTS = [
-    "Computer Network",
-    "Principle of Software Engineer",
-    "Data Structure Algorithm",
-    "Statics Mathematics",
-    "Personal Finance",
-    "Computer Graphics"
-  ];
+  <script>
+    const SUBJECTS = [
+      "Computer Network",
+      "Principle of Software Engineer",
+      "Data Structure Algorithm",
+      "Statics Mathematics",
+      "Personal Finance",
+      "Computer Graphics"
+    ];
 
-  const CREDENTIALS = {
-    "Computer Network": { teacher: "Yughandra More", pass: "CN-YM@4521" },
-    "Principle of Software Engineer": { teacher: "Archana Bhide", pass: "PSE-AB#8832" },
-    "Data Structure Algorithm": { teacher: "Aditi Mam", pass: "DSA-AM*7290" },
-    "Statics Mathematics": { teacher: "Punam Sindhu", pass: "STAT-PS$6614" },
-    "Personal Finance": { teacher: "Mandar Sir", pass: "PF-MS@3107" },
-    "Computer Graphics": { teacher: "Yughandra More", pass: "CG-YM%5579" }
-  };
+    const CREDENTIALS = {
+      "Computer Network": { teacher: "Yughandra More", pass: "CN-YM@4521" },
+      "Principle of Software Engineer": { teacher: "Archana Bhide", pass: "PSE-AB#8832" },
+      "Data Structure Algorithm": { teacher: "Aditi Mam", pass: "DSA-AM*7290" },
+      "Statics Mathematics": { teacher: "Punam Sindhu", pass: "STAT-PS$6614" },
+      "Personal Finance": { teacher: "Mandar Sir", pass: "PF-MS@3107" },
+      "Computer Graphics": { teacher: "Yughandra More", pass: "CG-YM%5579" }
+    };
 
-  const subjectsWrap = document.getElementById('subjects');
-  SUBJECTS.forEach(sub => {
-    const btn = document.createElement('button');
-    btn.className = 'sub-btn';
-    btn.innerText = sub;
-    btn.onclick = () => openLogin(sub);
-    subjectsWrap.appendChild(btn);
-  });
+    const subjectsWrap = document.getElementById('subjects');
 
-  const backdrop = document.getElementById('modalBackdrop');
-  const modalSubject = document.getElementById('modalSubject');
-  const teacherNameInput = document.getElementById('teacherName');
-  const teacherPassInput = document.getElementById('teacherPass');
-  const modalError = document.getElementById('modalError');
+    SUBJECTS.forEach((sub, i) => {
+      const btn = document.createElement('button');
+      btn.className = 'sub-btn';
+      btn.style.animationDelay = (i * 0.08) + "s";
+      btn.innerText = sub;
+      btn.onclick = () => openLogin(sub);
+      subjectsWrap.appendChild(btn);
+    });
 
-  let currentSubject = null;
+    const backdrop = document.getElementById('modalBackdrop');
+    const modalSubject = document.getElementById('modalSubject');
+    const teacherNameInput = document.getElementById('teacherName');
+    const teacherPassInput = document.getElementById('teacherPass');
+    const modalError = document.getElementById('modalError');
 
-  function openLogin(subject){
-    currentSubject = subject;
-    modalSubject.textContent = subject;
-    teacherNameInput.value = '';
-    teacherPassInput.value = '';
-    modalError.style.display = 'none';
-    backdrop.style.display = 'flex';
-  }
+    let currentSubject = null;
 
-  function closeLogin(){ backdrop.style.display = 'none'; }
-  document.getElementById('cancelBtn').onclick = closeLogin;
-
-  function normalize(s){ return (s||'').trim().toLowerCase(); }
-
-  document.getElementById('submitBtn').onclick = function(){
-    const enteredName = teacherNameInput.value;
-    const enteredPass = teacherPassInput.value;
-    const cred = CREDENTIALS[currentSubject];
-
-    if (normalize(enteredName) === normalize(cred.teacher) && enteredPass === cred.pass) {
-      window.location.href = "attendance.html?sub=" + encodeURIComponent(currentSubject) + "&teacher=" + encodeURIComponent(cred.teacher);
-    } else {
-      modalError.style.display = "block";
+    function openLogin(subject){
+      currentSubject = subject;
+      modalSubject.textContent = subject;
+      teacherNameInput.value = '';
+      teacherPassInput.value = '';
+      modalError.style.display = 'none';
+      backdrop.style.display = 'flex';
     }
-  };
-</script>
+
+    function closeLogin(){
+      backdrop.style.display = 'none';
+    }
+
+    document.getElementById('cancelBtn').onclick = closeLogin;
+
+    function normalize(s){ return (s||'').trim().toLowerCase(); }
+
+    document.getElementById('submitBtn').onclick = function(){
+      const enteredName = teacherNameInput.value;
+      const enteredPass = teacherPassInput.value;
+
+      const cred = CREDENTIALS[currentSubject];
+
+      if (normalize(enteredName) === normalize(cred.teacher) && enteredPass === cred.pass) {
+        window.location.href =
+          "attendance.html?sub=" + encodeURIComponent(currentSubject) +
+          "&teacher=" + encodeURIComponent(cred.teacher);
+      } else {
+        modalError.style.display = "block";
+      }
+    };
+  </script>
+
 </body>
 </html>
