--- a/attendance.html
+++ b/attendance.html
@@ -4,37 +4,30 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Attendance — Subject</title>
+
   <style>
     body{
       font-family:Poppins,Inter,sans-serif;
       margin:0; padding:28px;
-      background:#f6fbff;
+      background:#eef6ff;
       color:#07304f;
     }
+
     .card{
       max-width:900px;
       margin:18px auto;
       background:white;
-      padding:18px;
-      border-radius:12px;
-      box-shadow:0 8px 30px rgba(8,24,50,0.06);
+      padding:22px;
+      border-radius:14px;
+      box-shadow:0 10px 30px rgba(0,0,0,0.06);
     }
-    h1{ margin:0; font-size:20px; }
-    .meta{ color:#234a6f; font-size:14px; margin-bottom:12px; }
-    table{ width:100%; border-collapse:collapse; margin-top:12px; }
-    th,td{ padding:10px; border-bottom:1px solid rgba(10,30,60,0.06); text-align:left; }
-    .btn{
-      padding:10px 18px; border-radius:8px;
-      border:none; cursor:pointer; font-weight:700;
-      background:#2e7d32; color:#fff;
-      margin-top:18px; display:block; margin-left:auto; margin-right:auto;
-    }
-    /* Header buttons */
+
+    /* Top Header */
     .topbar{
       display:flex;
       justify-content:space-between;
       align-items:center;
-      margin-bottom:15px;
+      margin-bottom:18px;
     }
     .btn-small{
       padding:8px 14px;
@@ -44,15 +37,97 @@
       font-weight:600;
       font-size:14px;
     }
-    .back-btn{ background:#cfd8dc; }
-    .defaulter-btn{ background:#e53935; color:#fff; }
+    .back-btn{
+      background:#dfe6ea;
+    }
+    .defaulter-btn{
+      background:#e53935;
+      color:#fff;
+    }
+
+    h1{ margin:0; font-size:22px; }
+    .meta{ color:#234a6f; font-size:14px; margin-bottom:12px; }
+
+    table{
+      width:100%;
+      border-collapse:collapse;
+      margin-top:10px;
+    }
+
+    th{
+      text-align:left;
+      padding:12px;
+      background:#f1f5fa;
+      border-bottom:1px solid #d8e1eb;
+      font-size:15px;
+    }
+
+    td{
+      padding:12px;
+      border-bottom:1px solid #eef2f7;
+      font-size:15px;
+    }
+
+    /* ---------- RADIO BUTTON STYLING ---------- */
+    .choice-box{
+      display:inline-flex;
+      align-items:center;
+      gap:8px;
+      padding:8px 14px;
+      border:1px solid #cfd8e3;
+      border-radius:25px;
+      cursor:pointer;
+      transition:0.2s;
+      user-select:none;
+    }
+
+    .choice-box:hover{
+      background:#e9f3ff;
+      transform:scale(1.03);
+    }
+
+    .choice-box input{
+      transform:scale(1.4);
+      cursor:pointer;
+    }
+
+    /* Present color */
+    .present:hover{
+      background:#d8f6e3;
+      border-color:#52b36d;
+    }
+
+    /* Absent color */
+    .absent:hover{
+      background:#ffe1e1;
+      border-color:#f05959;
+    }
+
+    /* Main Submit Button */
+    .btn{
+      padding:12px 20px;
+      border-radius:10px;
+      border:none; cursor:pointer;
+      font-weight:700;
+      background:#2e7d32;
+      color:#fff;
+      margin-top:22px;
+      display:block;
+      margin-left:auto; margin-right:auto;
+      font-size:16px;
+    }
+
+    .btn:hover{
+      background:#256628;
+      transform:scale(1.02);
+      transition:0.2s;
+    }
   </style>
 </head>
 <body>
 
   <div class="card">
 
-    <!-- TOP HEADER WITH BUTTONS -->
     <div class="topbar">
       <button class="btn-small back-btn" onclick="history.back()">⬅ Back</button>
       <h1 id="title">Attendance</h1>
@@ -77,7 +152,6 @@
   </div>
 
   <script>
-    // GET SUBJECT & TEACHER FROM URL
     const params = new URLSearchParams(window.location.search);
     const subject = params.get('sub') || 'Unknown Subject';
     const teacher = params.get('teacher') || 'Unknown Teacher';
@@ -85,14 +159,12 @@
     document.getElementById('title').innerText = `${subject} — Attendance`;
     document.getElementById('meta').innerText = `Subject: ${subject}  |  Teacher: ${teacher}`;
 
-    // OPEN DEFAULTER LIST PAGE
     function openDefaulterList(){
       window.location.href =
         "defaulter.html?sub=" + encodeURIComponent(subject) +
         "&teacher=" + encodeURIComponent(teacher);
     }
 
-    // STUDENT LIST
     const students = [
       { roll:6202, name:"Sangram" },
       { roll:6203, name:"Nitesh" },
@@ -111,19 +183,31 @@
 
     const tbody = document.getElementById("studentList");
 
-    // AUTO-GENERATE ROWS
     students.forEach(s => {
       const row = document.createElement("tr");
+
       row.innerHTML = `
         <td>${s.roll}</td>
         <td>${s.name}</td>
-        <td><input type="radio" name="att_${s.roll}" value="Present"></td>
-        <td><input type="radio" name="att_${s.roll}" value="Absent"></td>
+
+        <td>
+          <label class="choice-box present">
+            <input type="radio" name="att_${s.roll}" value="Present">
+            Present
+          </label>
+        </td>
+
+        <td>
+          <label class="choice-box absent">
+            <input type="radio" name="att_${s.roll}" value="Absent">
+            Absent
+          </label>
+        </td>
       `;
+
       tbody.appendChild(row);
     });
 
-    // SAVE ATTENDANCE
     document.getElementById("submitAttendance").onclick = () => {
       const today = new Date().toLocaleDateString('en-IN');
       const key = `attendance::${subject}::${today}`;
@@ -148,4 +232,3 @@
 
 </body>
 </html>
-
